--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
                   Sell Your Music Worldwide & Keep 100% Ownership
                 </p>
 
-                <a href="#" class="link-button">Join &rarr;</a>
+                <a href="#" class="link-button">Send &rarr;</a>
               </div>
             </div>
-            <div class="class-card__title">Join</div>
+            <div class="class-card__title">Contact Us</div>
           </div>
         </article>
       </div>
